Hogwarts school with database done